# dapp_wallet_rs

client/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
server/: Cargo.toml
server/src/blockchain/: block.rs  mod.rs  network.rs  transaction.rs
