[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"]}
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
